[package]
name = "brianggeth-gear-academy"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }
pebbles-game-io = { path = "io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }
